GUI-2504: Fix validation error line height for better display when error wraps; adjust margins for threshold validation error in Create Alarm dialog

--- a/eucaconsole/static/css/eucaconsole.css
+++ b/eucaconsole/static/css/eucaconsole.css
@@ -1838,10 +1838,10 @@ form .controls-wrapper > [class*='small-'] label.right { position: relative; rig
 
 [data-abide] .controls-wrapper .error label, [data-abide] .controls-wrapper.error label, .controls-wrapper .error label { color: #333333; }
 [data-abide] .controls-wrapper .error input, [data-abide] .controls-wrapper .error select, [data-abide] .controls-wrapper.error input, [data-abide] .controls-wrapper.error select, .controls-wrapper .error input, .controls-wrapper .error select { border: 1px solid darkred; background-color: #ffe9ec; }
-[data-abide] .controls-wrapper .error small.error, [data-abide] .controls-wrapper.error small.error, .controls-wrapper .error small.error { margin-bottom: 6px; background-color: transparent; color: darkred; font-weight: bold; padding-left: 0; font-style: normal; padding-bottom: 4px; }
+[data-abide] .controls-wrapper .error small.error, [data-abide] .controls-wrapper.error small.error, .controls-wrapper .error small.error { margin-bottom: 6px; background-color: transparent; color: darkred; font-weight: bold; padding-left: 0; font-style: normal; padding-bottom: 4px; line-height: 1rem; }
 [data-abide] .controls-wrapper .error small.error.inline, [data-abide] .controls-wrapper.error small.error.inline, .controls-wrapper .error small.error.inline { display: inline-block; margin-left: 1rem; }
 
-[data-abide] small.error, small.error { margin-bottom: 6px; background-color: transparent; color: darkred; font-weight: bold; padding-left: 0; font-style: normal; padding-bottom: 4px; }
+[data-abide] small.error, small.error { margin-bottom: 6px; background-color: transparent; color: darkred; font-weight: bold; padding-left: 0; font-style: normal; padding-bottom: 4px; line-height: 1rem; }
 
 textarea.hidden { display: none; }
 textarea.hidden.debug { display: block; }
