--- a/eucaconsole/static/sass/includes/_eucavariables.scss
+++ b/eucaconsole/static/sass/includes/_eucavariables.scss
@@ -272,6 +272,7 @@ $alarm-status-color-ok: $hp-green;
     padding-left: 0;
     font-style: normal;
     padding-bottom: 4px;
+    line-height: 1rem;
 }
 
 @mixin table-styles-mixin {
