--- a/eucaconsole/static/sass/widgets/create-alarm-dialog.scss
+++ b/eucaconsole/static/sass/widgets/create-alarm-dialog.scss
@@ -22,4 +22,8 @@
         font-weight: bold;
         color: $hpe-gray;
     }
+
+    input[name=threshold] {
+        margin-bottom: 0;
+    }
 }
